fix: fix dark mode in storybook

--- a/packages/config/tailwind-config/tailwind.css
+++ b/packages/config/tailwind-config/tailwind.css
@@ -23,6 +23,7 @@
 /********************************************************************
  * dark theme variables
  ********************************************************************/
+html.dark,
 :root[data-theme="dark"] {
   /* info color palette dark */
   --theme-info: var(--theme-info-400);
